--- a/notebook/MODEL-TRAINING.ipynb
+++ b/notebook/MODEL-TRAINING.ipynb
@@ -2,22 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-08T12:40:55.214508Z",
+     "start_time": "2025-01-08T12:40:50.091054Z"
+    }
+   },
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-08T14:54:19.895086Z",
+     "start_time": "2025-01-08T14:54:19.890862Z"
+    }
+   },
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras"
+   ],
    "outputs": [],
-   "source": []
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
